<resources>
    <string name="app_name">Evalúa Facíl</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Iniciar Sesión</string>
    <string name="sync">Sincronizar ahora!</string>

    <string name="errorConexion">Necesitas una conexion estable a internet para realizar esta acción.</string>
    <string name="website">www.evaluafacil.edu.mx</string>

    <!-- Etiquetas -->
    <string name="welcom">Bienvenid@</string>
    <string name="grade">°</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="cuidado">¡Cuidado!</string>
    <string name="save">Guardar</string>

    <!-- Indicators -->
    <string name="name">Nombre del alumno</string>
    <string name="indicatorAbb">Faltas</string>
    <string name="indicatorAsisTitle">Pronporciona las faltas de los alumnos.</string>
    <string name="indicatorAsisSubTitle">Contidad de asistencias en el bimestre </string>
    <string name="indicatorFri">Convivencia</string>
    <string name="indicatorFriend">Proporciona la convivencia escolar de los alumnos.</string>
    <string name="indicatorFriendSub">En el bimestre.</string>
    <string name="indicatorM">Matemáticas</string>
    <string name="indicatorMath">Proporciona la comprensión matemática de los alumnos</string>
    <string name="indicatorMathSb">En el bimestre</string>
    <string name="indicatorP">Participación</string>
    <string name="indicatorPart">Proporciona la paticipación de los alumnos</string>
    <string name="indicatorPartSub">En el bimestre</string>
    <string name="indicatorR">Lector</string>
    <string name="indicatorReading">Proporciona la compresión lectora de los alumnos</string>
    <string name="indicatorReadingSub">En el bimestre</string>
    <string name="indicatorPer">Desemepeño</string>
    <string name="indicatorPerf">Proporciona el desempeño de los alumnos</string>
    <string name="indicatorPerfSub">En el bimestre</string>


    <string name="espa">Español</string>
    <string name="mat">Matemáticas</string>

    <string name="titleEspa">Lectora</string>
    <string name="titleDesemp">Desemepeño</string>
    <string name="titleCon">Convivencia</string>
    <string name="titleAsis">Asistencia</string>
    <string name="titlePart">Participación</string>
    <string name="titleMath">Matemática</string>

    <string name="asisTitleEdit">Promedio de faltas</string>
    <string name="conviEdit">Promedio de convivencia escolar</string>
    <string name="conviEdit2">Promedio de convivencia escolar</string>
    <string name="deseEdit">Promedio de desempeño</string>
    <string name="partEdit">Promedio de paticipación</string>
    <string name="lecEdit">Promedio de comprensión lectora</string>
    <string name="mateEdit">Promedio de comprensión matemática</string>

    <string name="titleTab">Alumnos</string>
    <string name="promedio">Poncentaje</string>
    <string name="tabMala">Mala</string>
    <string name="tabReg">Regular</string>
    <string name="tabBue">Buena</string>
    <string name="asiNinguno">Ninguna</string>
    <string name="asiUna">Una</string>
    <string name="asiMas">Mas de una</string>
    <string name="signo">%</string>

<!-- Login -->
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="start">¡Comenzar!</string>
    <string name="help">Necesito ayuda</string>
    <string name="errorLogin">Usuario y/o Contraseña no son validas, vuelva a intentarlo.</string>
    <string name="validateUserTitle">Comprobando informacion</string>
    <string name="validateUserMessage">Validando usuario y contraseña, por favor espere unos segundos...</string>
    <string name="validatePorfileTitle">Obtenetiendo perfil</string>
    <string name="validatePorfileMessage">Cargando perfil, por favor espere unos segundos</string>

    <!-- Cerrar Sesion -->
    <string name="contentSesion">¿Estas seguro(a) de querer CERRAR SESION?</string>
    <string name="subCintentSesion">Todos los datos que aún no se han sicronizado se perderan.</string>

    <!-- etiquetas error-->
    <string name="errorMessage">Oops...!</string>
    <string name="errorConfirm">Lo entiendo!</string>
    <string name="construccion">Esta parte permanece en construcción. Disculpe las molestias que esto pueda ocasionar</string>
    <string name="faltaD">Aun no has proporcionado todos los campos...!</string>

    <!-- Etiquetas sweet -->
    <string name="goodJob">Buen trabajo!</string>
    <string name="contentSave">Has guardado con éxito el indicador </string>
    <string name="contentEdit">Has editado con éxito el indicador </string>
    <string name="next">Seguir adelante!</string>
    <string name="indAsistencia">Asistencia</string>
    <string name="indDesempe">Desempeño</string>
    <string name="indParti">Participación</string>
    <string name="indConvi">Convivencia escolar</string>
    <string name="indLect">Comprensión lectora</string>
    <string name="indMate">Comprensión matemáticas</string>

    <string name="seguro">¿Estas seguro?</string>
    <string name="seguroContent">¿De querer editar este indicatodor?</string>
    <string name="seguroSi">Si, lo estoy!</string>
    <string name="seguroNo">NO!</string>

    <string-array name="menuDrawer">
        <item>Bitácotra</item>
        <item>Dejanos un comentario</item>
        <item>Cerrar Sesión</item>
    </string-array>
    <string name="title_activity_indicator_tabs">Indicadores</string>
    <string name="title_activity_binnacle">Bitácora</string>

    <string name="binnacleTitleOk">Sincronizados</string>
    <string name="binnacleTitleSync">Para Sincronizados</string>
    <string name="titleBinnacle">Información sincronizada hasta el momento.</string>

    <!--Dias -->
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miércoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sábado</string>
    <string name="domingo">Domingo</string>

    <string name="subEdit">Buena es de 90 a 100, Regular de 70 a 100 y mala de 0 a 69</string>

</resources>
