<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
android:layout_height="match_parent" android:gravity="center_vertical|center_horizontal"
android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin" tools:context=".LoginActivity"
android:background="@color/colorFont"
android:descendantFocusability="beforeDescendants"
android:focusableInTouchMode="true">

<LinearLayout
    android:id="@+id/ll1"
    android:layout_width="match_parent"
    android:layout_height="144dp"
    android:gravity="center_vertical|center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textView2"
        android:textSize="30dp"
        android:textColor="#ffffffff" />


</LinearLayout>

<LinearLayout
    android:id="@+id/ll2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:gravity="center_vertical|center_horizontal">
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:visibility="gone" />
    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="vertical">

                <AutoCompleteTextView android:id="@+id/edtLoginUser" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/user"
                    android:inputType="textEmailAddress" android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="#ffffffff"
                    android:textColor="#ffffffff"
                    android:gravity="center" />

                <EditText android:id="@+id/edtLoginPassword" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/password"
                    android:imeActionLabel="sing in"
                    android:imeOptions="actionUnspecified" android:inputType="textPassword"
                    android:maxLines="1" android:singleLine="true"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="#ffffffff"
                    android:textColor="#ffffffff"
                    android:gravity="center" />

                <Button android:id="@+id/btnLoginStart" style="?android:textAppearanceSmall"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_marginTop="16dp" android:text="@string/start"
                    android:textStyle="bold"
                    android:textColor="#ffffffff"
                    android:background="@drawable/click_button" />

                <Button
                    style="?android:textAppearanceSmall"
                    android:id="@+id/btnLoginHelp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/help"
                    android:textStyle="bold"
                    android:textColor="#ffffffff"
                    android:background="@drawable/click_button" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

<RelativeLayout
    android:id="@+id/ll3"
    android:layout_width="match_parent"
    android:layout_height="85dp"
    android:gravity="bottom|center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/website"
        android:id="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF" />
</RelativeLayout>
</LinearLayout>